*Empty MediaWiki Message*

--- a/ᏎᎷ.mw
+++ b/ᏎᎷ.mw
@@ -15,7 +15,7 @@
 | binomial_authority = [[Carolus Linnaeus|L.]]
 }}
 
-'''ᏎᎷ'''  (''Zea ᎠᎾᏍᎬᏘ'' ssp. ''ᎠᎾᏍᎬᏘ''), ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏎᎷ''', ᎨᏒᎢ [[cereal|ᎠᎵᏍᏓᏴᏗ]] [[grain|ᎤᏛᏒ ᎤᎦᏔ]] Ꮎ ᏥᏄᏍᏛᎩ ᎫᏄᏡᏂ ᎭᏫᎾᏗᏢ [[Mesoamerica]]. ᎾᏍᎩ ᎠᏰᏍᏛᏗ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎡᎶᎯ ᎤᎶᏐᏅ European ᏚᏓᏂᏴᏒ ᎬᏙᏗ ᎯᎠ ᎠᎺᎵᎨ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ [[15th century|15th sqohitsuqui tsudetiyvdi]] ᎠᎴ ᎢᎬᏱ [[16th century|16th sqohitsuqui tsudetiyvdi]].  ᎾᏍᎩ ᎨᏒᎢ ᎤᏯᏅᎲ ᏎᎷ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], [[Canada]], [[New Zealand|ᎢᏤ Zealand]], ᎠᎴ [[ᏒᎳᏗᏝ]], ᎠᎴ ᎭᏫᎾᏗᏢ ᏐᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ Ꮎ ᎠᎴᏂᏍᎬ ᎠᎾᏍᎬᏘ ᏩᏎᏍᏗ ᏐᎢ ᎠᎵᏍᏓᏴᏗ ᎤᏛᏒ ᎤᎦᏔ.  ᎾᏍᎩ ᎨᏒᎢ ᎤᏯᏅᎲ '''mealies''' ᎭᏫᎾᏗᏢ [[southern Africa|ᎤᎦᎾᏭ ᎢᏗᏢ ᎬᎿᎦᏍᏛ]].  [[Hybrid|ᏧᏠᎯᏍᏗ]] ᏎᎷ ᎨᏒᎢ ᎠᏑᏰᏍᏔᏅ ᎾᎥᎢ ᏗᏂᎶᎩᏍᎩ ᎦᏬᎯᎸᏙᏗ ᏄᏍᏛ ᎢᏯᏛᏁᏗ varieties ᎾᏍᎩᎾᎢ Ꮝ ᎦᎸᎳᏗ ᎤᏛᏒ ᎤᎦᏔ ᏚᏓᏲᏒᎩ, ᎤᏍᏆᎸᎲ [[heterosis]] ("ᏧᏠᎯᏍᏗ ᏄᎵᏂᎬᎬ").  ᏎᎷ ᎨᏒᎢ ᏌᏊ ᎯᎠ ᎢᎬᏱ ᏠᎨᏏ ᏓᏫᏒ ᎾᏍᎩᎾᎢ ᎦᏙ ᎤᏍᏗ genetically ᏧᏓᎴᎿᎢ varieties ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎦᏛᎬᎢ ᎢᎦᏘᎭ ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ.
+'''ᏎᎷ'''  (''Zea ᎠᎾᏍᎬᏘ'' ssp. ''ᎠᎾᏍᎬᏘ''), ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏎᎷ''', ᎨᏒᎢ [[cereal|ᎠᎵᏍᏓᏴᏗ]] [[grain|ᎤᏛᏒ ᎤᎦᏔ]] Ꮎ ᏥᏄᏍᏛᎩ ᎫᏄᏡᏂ ᎭᏫᎾᏗᏢ [[Mesoamerica]]. ᎾᏍᎩ ᎠᏰᏍᏛᏗ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎡᎶᎯ ᎤᎶᏐᏅ European ᏚᏓᏂᏴᏒ ᎬᏙᏗ ᎯᎠ ᎠᎺᎵᎨ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ [[15th century|15th ᏍᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎠᎴ ᎢᎬᏱ [[16th century|16th sqohitsuqui tsudetiyvdi]].  ᎾᏍᎩ ᎨᏒᎢ ᎤᏯᏅᎲ ᏎᎷ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], [[Canada]], [[New Zealand|ᎢᏤ Zealand]], ᎠᎴ [[ᏒᎳᏗᏝ]], ᎠᎴ ᎭᏫᎾᏗᏢ ᏐᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ Ꮎ ᎠᎴᏂᏍᎬ ᎠᎾᏍᎬᏘ ᏩᏎᏍᏗ ᏐᎢ ᎠᎵᏍᏓᏴᏗ ᎤᏛᏒ ᎤᎦᏔ.  ᎾᏍᎩ ᎨᏒᎢ ᎤᏯᏅᎲ '''mealies''' ᎭᏫᎾᏗᏢ [[southern Africa|ᎤᎦᎾᏭ ᎢᏗᏢ ᎬᎿᎦᏍᏛ]].  [[Hybrid|ᏧᏠᎯᏍᏗ]] ᏎᎷ ᎨᏒᎢ ᎠᏑᏰᏍᏔᏅ ᎾᎥᎢ ᏗᏂᎶᎩᏍᎩ ᎦᏬᎯᎸᏙᏗ ᏄᏍᏛ ᎢᏯᏛᏁᏗ varieties ᎾᏍᎩᎾᎢ Ꮝ ᎦᎸᎳᏗ ᎤᏛᏒ ᎤᎦᏔ ᏚᏓᏲᏒᎩ, ᎤᏍᏆᎸᎲ [[heterosis]] ("ᏧᏠᎯᏍᏗ ᏄᎵᏂᎬᎬ").  ᏎᎷ ᎨᏒᎢ ᏌᏊ ᎯᎠ ᎢᎬᏱ ᏠᎨᏏ ᏓᏫᏒ ᎾᏍᎩᎾᎢ ᎦᏙ ᎤᏍᏗ genetically ᏧᏓᎴᎿᎢ varieties ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎦᏛᎬᎢ ᎢᎦᏘᎭ ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ.
 
 ᎾᎯᏳᎢ ᎢᎦᏛ ᏎᎷ varieties ᎠᏛᏍᎬ 7 [[meter|m]] (23 [[foot (unit of length)|ft]]) ᎢᏅ ᎢᎦᏘ ᎾᎾᎢ ᎤᏙᎯᏳ ᎦᎷᎯᏍᏗ, ᎠᏓᎾᏅᏗ ᏎᎷ ᎤᎭ ᏭᏪᏙᎢ ᏗᏓᏓᏂᎸᏣᏘ ᎾᏍᎩᎾᎢ ᏂᎦᏛᎢ 2.5 m (9 ft). [[Sweetcorn]] ᎨᏒᎢ ᎤᏠᏱᎭ ᏍᏆᎵᎯᎨᏍᏗ ᎬᎾᏬᏍᎬ ᏠᎨᏏ-ᏎᎷ varieties.
 
@@ -25,9 +25,9 @@
 
 ᎯᎠ ᏗᎦᎴᏂ ᎠᎴ ᎠᎨᏴ ᎠᏛᎯᏍᏙᏗ, ᎠᏍᏓᏯ ᎫᏝᎢ ᎦᏬᎯᎸᏙᏗ ᎾᎥᎢ ᎯᎸᏍᎩ ᏫᏚᏳᎪᏛ ᏧᎦᎶᎦ, ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᏍᏚᏅᎩ-ᎭᏫᎾᏗᏢ ᎾᎥᎢ ᎠᏂ ᎯᎠ ᎤᏩᏂᎦᎸ Ꮎ ᎤᏅᏌ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎾᏛᏁᎸᏗ ᎤᏅᏌ ᎠᎯᏗᎨᎢ ᎢᏳᎳᎪᏗ ᎯᎠ ᏄᏍᏗᏓᏅ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᏓᎶᏂᎨ ᏏᎵᎩ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎦᎶᎬ whorl ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎦᎴᏂ.  ᎯᎠ ᏏᎵᎩ ᎠᎴ elongated ᎤᏚᎯᏍᏛ Ꮎ ᎭᎦᏔ ᎾᏍᎩᏯᎢ ᎤᏓᏂᏝᏅ ᎤᏍᏗᏰᎬ, ᎾᎾᎢ ᎢᎬᏱ ᎢᏤ ᎢᏳᏍᏗ, ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎩᎦᎨ ᎠᎴ ᏓᎶᏂᎨ. ᏎᎷ ᎦᎧᏅ ᎠᏂᏏᏴᏫᎭ ᏫᎵ ᎤᏙᎷᏬᏗ 2–4 ᏗᎦᎴᏂ. ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏓᎦᎶᎩᏍᎬ techniques ᎭᏫᎾᏗᏢ ᎤᏙᎷᏩᏛᏓ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎤᏠᏱᎭ rely ᎾᎿ ᎠᏫᏒᏗ ᎠᏂᎧᏅᏍᎬ, ᎦᏙ ᎤᏍᏗ ᎠᎦᏲᎳᏅ ᎯᎠ ᏎᏍᏗ ᏗᎦᎴᏂ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎥᎢᏒᎢ ᎬᏩᏚᏫᏛ 0.9 (Ꮎ ᎨᏒᎢ, ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᏌᏊ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎦᎪᏘ ᎬᏙᏗ ᎢᎦᏛ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ stressed ᎤᏅᏌ ᎠᏛᎯᏍᏙᏗ ᏭᎶᏒᏍᏛ ᎤᏴᏜ ᎤᏩᎾᏒ ᎤᏛᏒ ᏗᎦᎴᏂ).[http://maize.agron.iastate.edu/ears.html] ᎠᏂᎧᏅᏍᎬ ᎾᏍᎩᎾᎢ [[silage]] ᏫᎵ ᎾᏍᏋ ᎢᏧᎳᎭ denser ᎠᎵᏂᎬᏁᏗ ᎢᏧᎳᎭ ᎡᎳᏗᎨ ᏎᏍᏗ ᏗᎦᎴᏂ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎦᎪᏘ ᎢᏳᏍᏗ ᏯᏛᎿ. ᎤᏙᎯᏳ varieties ᏎᎷ ᎤᎭ ᏭᏪᏙᎢ ᏗᏓᏓᏂᎸᏣᏘ ᎠᏛᎯᏍᏙᏗ ᏗᎦᏟᏌᏅᎯ ᎤᏙᎷᏩᏛᏓ ᏗᎦᎴᏂ, ᎠᎴ ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎯᎠ ᏗᏓᎴᎲᏍᎬ ᎯᎠ "ᎤᏍᏗ ᏎᎷ" Ꮎ ᎨᏒᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎢᏴ ᎠᏂᏙᎾᎥ ᎭᏫᎾᏗᏢ [[Asian cuisine|Asian ᎠᎵᏍᏓᏴᏗ]].
 
-ᏎᎷ [[cultivar]]ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎯᎠ [[temperate zone|ᎡᎷᏪᎢ ᎡᎶᎯ ᎠᏍᏓᏅᏅ]] ᎠᎴ ᎠᎦᏎᏍᏔᏅ [[day neutral plant|ᎢᎦ-ᎤᏁᎫᏥᏛ]] ᎠᎴ ᎠᏥᎸᏍᎩ ᎤᎶᏐᏅ ᎤᏙᎯᏳ ᏎᏍᏗ ᎯᎸᏍᎩ ᎢᎦ ᎾᎾᎢ > 50° F (10&nbsp;°C). ᏱᏂᎬᏛᎾ, ᏎᎷ cultivars ᏂᏛᎴᏅᏓ [[Central America|ᎠᏰᎵ ᎠᎺᎵᎨ]] ᎠᎴ ᏐᎢ ᎤᎦᎾᏭ ᎦᎷᎯᏍᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ [[short day plant|ᏍᏆᎳᎢ-ᎢᎦ]] ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᏫᎵ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏛᎯᏍᏙᏗ ᏗᎦᎴᏂ ᎠᎴ ᎤᏥᏣᎷ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏅᎯᏓ ᎪᎨᏱ ᎯᎸᏍᎩ ᎢᎦ ᎾᎾᎢ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎤᏜᏅᏛ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ Ꭴ.. ᏎᎷ ᎠᏓᏠᏍᏗ.[http://www.fao.org/ag/aGL/aglw/cropwater/maize.stm] ᎯᎠ ᎢᎦ-ᏂᎦᏅᎯᏒ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ [[flower|ᎠᏥᎸᏍᎩ]]ᎪᎯᏳᏙᏗ ᎨᏒᎢ controlled genetically ᎠᎴ regulated ᎾᎥᎢ ᎯᎠ [[phytochrome]] iyahdvnelidasdi.
+ᏎᎷ [[cultivar]]ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎯᎠ [[temperate zone|ᎡᎷᏪᎢ ᎡᎶᎯ ᎠᏍᏓᏅᏅ]] ᎠᎴ ᎠᎦᏎᏍᏔᏅ [[day neutral plant|ᎢᎦ-ᎤᏁᎫᏥᏛ]] ᎠᎴ ᎠᏥᎸᏍᎩ ᎤᎶᏐᏅ ᎤᏙᎯᏳ ᏎᏍᏗ ᎯᎸᏍᎩ ᎢᎦ ᎾᎾᎢ > 50° F (10&nbsp;°C). ᏱᏂᎬᏛᎾ, ᏎᎷ cultivars ᏂᏛᎴᏅᏓ [[Central America|ᎠᏰᎵ ᎠᎺᎵᎨ]] ᎠᎴ ᏐᎢ ᎤᎦᎾᏭ ᎦᎷᎯᏍᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ [[short day plant|ᏍᏆᎳᎢ-ᎢᎦ]] ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᏫᎵ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏛᎯᏍᏙᏗ ᏗᎦᎴᏂ ᎠᎴ ᎤᏥᏣᎷ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏅᎯᏓ ᎪᎨᏱ ᎯᎸᏍᎩ ᎢᎦ ᎾᎾᎢ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎤᏜᏅᏛ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ Ꭴ.. ᏎᎷ ᎠᏓᏠᏍᏗ.[http://www.fao.org/ag/aGL/aglw/cropwater/maize.stm] ᎯᎠ ᎢᎦ-ᏂᎦᏅᎯᏒ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ [[flower|ᎠᏥᎸᏍᎩ]]ᎪᎯᏳᏙᏗ ᎨᏒᎢ controlled genetically ᎠᎴ regulated ᎾᎥᎢ ᎯᎠ [[phytochrome]] ᎢᏯᏛᏁᎵᏓᏍᏗ.
 
-ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎤᏩᏂᎦᎸ ᏚᎵᏍᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏥᏣᎷ, [[inflorescence|ᎠᏛᎯᏍᏙᏗ]] ᎠᏍᎦᏯ ᎠᏂᏥᎸᏍᎩ. ᎾᏍᎩᎾᎢ ᎠᏂᏏᏴᏫᎭ ᏏᎵᎩ ᎾᎿ ᎦᏙ ᎤᏍᏗ pollen ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏥᏣᎷ ᏗᎦᏙᎯ, ᏌᏊ ᎠᏰᎵ ᏎᎷ ᎨᏒᎢ ᎠᏛᎯᏍᏔᏅ. ᎠᏲᎵ ᏗᎦᎴᏂ ᏰᎵᏇ ᎾᏍᏋ consumed ᏄᏩᎾᏒᎾ, ᎠᏫᏗᏍᎩ, ᏏᎵᎩ, ᎠᎴ ᏂᎦᏛ; ᏥᏄᏍᏗ ᎯᎠ ᎦᎪᏘ ᎤᏩᎾᏒ ᎤᏛᏒ (ᎤᏠᏱᎭ ᎾᎯᏳᎨᏒ ᎯᎠ ᎪᎨᏱ ᎢᏯᏅᏓ) ᎯᎠ ᎠᏫᏗᏍᎩ ᏗᏙᎳᎩ tougher ᎠᎴ ᎯᎠ ᏏᎵᎩ dries inedibility. ᎾᎥᎢ ᎣᏂᏱᏳ ᎦᎶᏂ ᎯᎠ ᏚᎷᏍᏘ ᎤᎭ ᎠᎧᏲᏔᏅ atsinuqowisgv ᎠᎴ ᏗᏙᎳᎩ ᎤᏦᏍᏗ ᎠᎵᏍᏓᏴᏗ ᏄᏠᏯᏍᏛᎾ ᎠᎾᏓᏍᏓᏴᎲᏍᎬ ᎠᏂ ᏩᎾᎢ ᎢᎬᏱ ᎭᏫᎾᏗᏢ ᎠᎵᏢᏍᎩ ᎠᎹ.
+ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎤᏩᏂᎦᎸ ᏚᎵᏍᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏥᏣᎷ, [[inflorescence|ᎠᏛᎯᏍᏙᏗ]] ᎠᏍᎦᏯ ᎠᏂᏥᎸᏍᎩ. ᎾᏍᎩᎾᎢ ᎠᏂᏏᏴᏫᎭ ᏏᎵᎩ ᎾᎿ ᎦᏙ ᎤᏍᏗ pollen ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏥᏣᎷ ᏗᎦᏙᎯ, ᏌᏊ ᎠᏰᎵ ᏎᎷ ᎨᏒᎢ ᎠᏛᎯᏍᏔᏅ. ᎠᏲᎵ ᏗᎦᎴᏂ ᏰᎵᏇ ᎾᏍᏋ consumed ᏄᏩᎾᏒᎾ, ᎠᏫᏗᏍᎩ, ᏏᎵᎩ, ᎠᎴ ᏂᎦᏛ; ᏥᏄᏍᏗ ᎯᎠ ᎦᎪᏘ ᎤᏩᎾᏒ ᎤᏛᏒ (ᎤᏠᏱᎭ ᎾᎯᏳᎨᏒ ᎯᎠ ᎪᎨᏱ ᎢᏯᏅᏓ) ᎯᎠ ᎠᏫᏗᏍᎩ ᏗᏙᎳᎩ tougher ᎠᎴ ᎯᎠ ᏏᎵᎩ dries inedibility. ᎾᎥᎢ ᎣᏂᏱᏳ ᎦᎶᏂ ᎯᎠ ᏚᎷᏍᏘ ᎤᎭ ᎠᎧᏲᏔᏅ ᎠᏥᏄᎣᏫᏍᎬ ᎠᎴ ᏗᏙᎳᎩ ᎤᏦᏍᏗ ᎠᎵᏍᏓᏴᏗ ᏄᏠᏯᏍᏛᎾ ᎠᎾᏓᏍᏓᏴᎲᏍᎬ ᎠᏂ ᏩᎾᎢ ᎢᎬᏱ ᎭᏫᎾᏗᏢ ᎠᎵᏢᏍᎩ ᎠᎹ.
 
 ᎯᎠ ᎠᏰᎵ ᏎᎷ ᎤᎭ [[pericarp|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎯᎠ ᎤᏓᏔᏅ ᎠᎩᏍᏗ fused ᎬᏙᏗ ᎯᎠ ᎤᎦᏔ ᎦᏌᎴᎾ, ᏫᏚᏳᎪᏛ ᎯᎠ [[Poaceae|grasses]]. ᎾᏍᎩ ᎨᏒᎢ ᎠᏍᏚᏗ ᏎᏍᏗ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏛᎯᏍᏙᏗ, ᎾᏍᎩ ᎤᏩᏒ Ꮎ ᎯᎠ ᎠᏂᏏᏴᏫᎭ ᎤᏓᏔᏅ ᎠᎩᏍᏗ (ᎯᎠ ᏚᎷᏍᏘ) ᎥᏝ ᎤᎾᏓᏟᏌᏅ ᎾᎾᎯ ᏏᏴᏫ ᎦᏟᏌᏅ ᎤᎪᏗᏗ. ᎯᎠ ᎤᏛᏒ ᎤᎦᏔ ᎠᎴ ᎬᏩᏚᏫᏛ ᎯᎠ ᏂᎬᎢ [[pea|ᏒᏙᏂ]], ᎠᎴ ᎠᏫᏒᏗ ᎭᏫᎾᏗᏢ ᎤᏠᏱᎭ ᏚᏓᏅ ᎦᏌᏆᎸ ᎤᏁᎬ ᎦᏛᎬᎢ ᏗᎧᏃᏗ, ᎦᏙ ᎤᏍᏗ ᏚᏙᏢᏒ ᎯᎠ ᎦᎴᏂ. ᎦᎴᏂ ᎢᎦᎢ ᎨᏐ ᏂᏛᎴᏅᏓ ᏔᎵ ᏅᎩ ᏍᎪᎯᏧᏈ ᎤᏛᏒ ᎤᎦᏔ, ᎠᎴ ᎨᏒᎢ ᏂᏛᎴᏅᏓ 10–25&nbsp;cm (4–10 ᎭᏫᎾᏗᏢ) ᎭᏫᎾᏗᏢ ᏂᎦᏅᎯᏒ. ᎤᏅᏌ ᎠᎴ ᏧᏓᎴᏅᏓ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ: blackish, ᏌᎪᏂᎨ-ᎤᏍᎪᎸ ᏌᎪᏂᎨ, ᎩᎦᎨ, ᎤᏁᎬ ᎠᎴ ᏓᎶᏂᎨ. ᎯᎳᎪ ᎢᏳ ᎦᏙᎯ ᎾᎾᎯ [[flour|ᎢᏒ ᏩᏂᎨ]], ᏎᎷ ᏚᏓᏲᏒᎩ ᎤᏟ ᎢᎦᎢ ᎢᏒ ᏩᏂᎨ, ᎬᏙᏗ ᎤᏣᏘ ᎦᏲᎵᎨ [[bran|ᎤᎦᏔᏁᎦ]], ᎬᎾᏬᏍᎬ ᎤᏣᎴᏍᏗ ᎾᏛᏁ. ᏱᏂᎬᏛᎾ, ᎾᏍᎩ ᎦᎷᎶᎩ ᎯᎠ ᏤᎵ [[gluten|ᏤᎵ]] ᎤᏣᎴᏍᏗ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏗᎪᏢᏅ baked ᏧᎬᏩᎶᏗ ᎬᏙᏗ ᎤᏲᎢᏳᏛᎾᎮᏕᎩ ᎠᎵᏌᎳᏗᏍᎬ ᎢᎦᏛ.
 
@@ -51,13 +51,13 @@
 
 ᎾᎿᎢ ᎨᏒᎢ ᎤᏂᎲ ᏧᎬᏩᎶᏗ ᎠᏰᎵ ᏎᎷ ᏓᎦᏘᎴᎬ, ''ᎯᎠ ᏎᎷ ᎠᏛᎯᏍᏙᏗ ᎠᎵᎪᏒ - ᎤᏂᎲ ᏧᎬᏩᎶᏗ ᎠᏰᎵ'', funded ᎾᎥᎢ ᎯᎠ USDA [[Agricultural Research Service|ᏗᎦᎶᎪᏗ ᎤᎬᏩᎵ ᏅᎠᏯᏍᏗ ᎾᏛᏁᎸ]] ᎠᎴ ᎤᏂᎷᏨ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏠᎨᏏ ᎠᏫᏒ ᎠᎦᏩᏙᎲᏍᏗ ᎾᎾᎢ ᎯᎠ [[University of Illinois at Urbana-Champaign|ᏗᏕᎶᏆᏍᏗ  ᎢᎵᏃᏱ ᎾᎾᎢ Urbana-ᏂᎬᏅ]].  ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᎤᏓᏂᏝᏅ ᎤᎭ ᎾᎥᏂᎨᏍᏗ 80,000 ᎯᎸᏍᎩ ᏗᏟᎶᏍᏙᏗ. ᎯᎠ ᎤᎪᏗᏗ ᎯᎠ ᎤᏓᏂᏝᏅ ᎤᎾᏠᏯᏍᏗ ᎯᎸᏍᎩ ᏍᎪᎯᏧᏈ ᏓᎪᎥᎩ genes, ᎧᏁᏉᏨ ᏗᎦᏟᏌᏅᎯ gene ᎤᎾᏓᏟᏌᏅ ᎠᎴ ᏐᎢ heritable variants. ᎾᎿᎢ ᎠᎴ ᎬᏩᏚᏫᏛ 1000 chromosomal ᏧᎾᏍᏗ (e.g., ᏫᏓᏲᎯᏍᏗ ᎠᎴ ᏧᏓᎴᎾᎢ) ᎠᎴ ᏚᏂᎲ ᏧᎬᏩᎶᏗ ᎬᏙᏗ ᎧᎵ ᏂᎨᏒᎾ ᎤᎾᏙᏢᎯ ᏗᏎᏍᏗ (e.g., tetraploids).  ᎠᏛᎯᏍᏙᏗ ᎾᎯᏳ ᎢᎪᎯ ᏄᏍᏛ ᎠᏂᏃᎮᏍᎬ ᎯᎠ ᏎᎷ ᏓᎦᏘᎴᎬ ᏚᏂᎲ ᏧᎬᏩᎶᏗ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᏍᎩ ᏐᎢ ᎾᎯᏳ ᎢᎪᎯ ᎬᏩᏚᏫᏛ ᏎᎷ ᎠᏛᎯᏍᏙᏗ ᏰᎵᏇ ᎾᏍᏋ accessed ᎾᎾᎢ [http://www.maizegdb.org/ MaizeGDB], ᎯᎠ ᏎᎷ ᎠᏛᎯᏍᏙᏗ ᎠᎴ Genomics ᎠᏓᏁᎳᏅᎯ.
 
-ᎭᏫᎾᏗᏢ 2005 ᎯᎠ Ꭴ.. ᎬᎾᏕᎾ agatohvsdi ᎦᎫᏍᏓᎥ (NSF), ᏗᎦᎸᏫᏍᏓᏁᏗ ᏗᎦᎶᎪᏗ (USDA) ᎠᎴ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏄᎵᏂᎬᎬ (ᎦᏣᏄᎳ) ᎪᏢᎯ Ꭲgotlvhi ignelvhi consortium ᎠᏍᏓᏩᏗᏒ ᎯᎠ ᏎᎷ [[genome]].  ᎯᎠ ᏄᎵᏍᏔᏅ DNA ᎠᏍᏓᏩᏗᏒ ᎾᎯᏳ ᎢᎪᎯ ᏫᎵ ᎾᏍᏋ ᏓᏍᏆᏂᎪᏔᏅ ᎾᏞᎬᏊ ᎾᎾᎯ [[GenBank]], ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᏓᎾᏅ ᎾᏍᎩᎾᎢ genome-ᎠᏍᏓᏩᏗᏒ ᎾᎯᏳ ᎢᎪᎯ.  Sequencing ᎯᎠ ᏎᎷ genome ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎤᏦᏍᏗ ᎢᎬᏂᏏᏍᎩ Ꮝ ᎡᏆ ᏂᎬᎢ ᎠᎴ ᏂᎦᏛ ᎠᏛᎯᏍᏙᏗ ᏗᏓᏁᎳᏅᎯ. ᎯᎠ genome ᎤᎭ 50,000–60,000 genes scattered ᏄᎾᏛᏅ ᎯᎠ 2.5 ᎯᏍᎩ ᏗᎳᏗ – ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎤᏙᏢᏒ DNA – Ꮎ ᎪᏢᏗ ᎦᎸᎳᏗᏢ Ꮝ 10 ᎤᎾᏙᏢᎯ.  (ᎾᎥᎢ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎯᎠ ᏴᏫ genome ᎢᎦᎢ ᎨᏐ ᎬᏩᏚᏫᏛ 2.9 ᎯᏍᎩ ᏗᎳᏗ ᎠᎴ 26,000 genes.)
+ᎭᏫᎾᏗᏢ 2005 ᎯᎠ Ꭴ.. ᎬᎾᏕᎾ ᎠᎦᎣᎲᏍᏗ ᎦᎫᏍᏓᎥ (NSF), ᏗᎦᎸᏫᏍᏓᏁᏗ ᏗᎦᎶᎪᏗ (USDA) ᎠᎴ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏄᎵᏂᎬᎬ (ᎦᏣᏄᎳ) ᎪᏢᎯ Ꭲgotlvhi ignelvhi consortium ᎠᏍᏓᏩᏗᏒ ᎯᎠ ᏎᎷ [[genome]].  ᎯᎠ ᏄᎵᏍᏔᏅ DNA ᎠᏍᏓᏩᏗᏒ ᎾᎯᏳ ᎢᎪᎯ ᏫᎵ ᎾᏍᏋ ᏓᏍᏆᏂᎪᏔᏅ ᎾᏞᎬᏊ ᎾᎾᎯ [[GenBank]], ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᏓᎾᏅ ᎾᏍᎩᎾᎢ genome-ᎠᏍᏓᏩᏗᏒ ᎾᎯᏳ ᎢᎪᎯ.  Sequencing ᎯᎠ ᏎᎷ genome ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎤᏦᏍᏗ ᎢᎬᏂᏏᏍᎩ Ꮝ ᎡᏆ ᏂᎬᎢ ᎠᎴ ᏂᎦᏛ ᎠᏛᎯᏍᏙᏗ ᏗᏓᏁᎳᏅᎯ. ᎯᎠ genome ᎤᎭ 50,000–60,000 genes scattered ᏄᎾᏛᏅ ᎯᎠ 2.5 ᎯᏍᎩ ᏗᎳᏗ – ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎤᏙᏢᏒ DNA – Ꮎ ᎪᏢᏗ ᎦᎸᎳᏗᏢ Ꮝ 10 ᎤᎾᏙᏢᎯ.  (ᎾᎥᎢ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎯᎠ ᏴᏫ genome ᎢᎦᎢ ᎨᏐ ᎬᏩᏚᏫᏛ 2.9 ᎯᏍᎩ ᏗᎳᏗ ᎠᎴ 26,000 genes.)
 
 == ᎠᏓᎴᏂᏍᎬ ᏎᎷ ==
 [[File:Corn parents1.jpg|right|thumbnail|ᏔᎵ teosintes ᏄᏪᏒᎩ  ᎾᏍᏋ ᎯᎠ ᎠᏓᎦᏴᎵᎨ  ᏎᎷ]]
 
 ᎾᎿᎢ ᎠᎴ ᎯᎸᏍᎩ theories ᎬᏩᏚᏫᏛ ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᏎᎷ: 
-# ᎾᏍᎩ ᎨᏒᎢ ᎠᏓᏎᎮᏗ ᎦᎷᎯᏍᏗ [[Mexican|ᎠᏍᏆᏂ]] ᎾᏕᏘᏴᎯᏒ [[teosinte]], ''Zea ᎠᎾᏍᎬᏘ'' ssp. ''parviglumis'', ᎾᏰᎯᏯ ᎯᎠ [[Balsas River valley|Balsas ᎤᏪᏴ ᎤᎨᏓᎵᏴ]] ᎤᎦᎾᏭ ᎢᏗᏢ [[ᎺᎯᎪ]], ᎬᏙᏗ ᎦᎸᎳᏗᏢ 12% Ꮝ ᎠᏛᎯᏍᏙᏗ ᏭᏚᎸᏛ ᎬᏙᏗ otsel igvnelv ᏂᏛᎴᏅᏓ ''Zea ᎠᎾᏍᎬᏘ'' ssp. ''mexicana'' ᏗᎬᏩᎶᏒ ᎠᏴᏍᏙᏗ; 
+# ᎾᏍᎩ ᎨᏒᎢ ᎠᏓᏎᎮᏗ ᎦᎷᎯᏍᏗ [[Mexican|ᎠᏍᏆᏂ]] ᎾᏕᏘᏴᎯᏒ [[teosinte]], ''Zea ᎠᎾᏍᎬᏘ'' ssp. ''parviglumis'', ᎾᏰᎯᏯ ᎯᎠ [[Balsas River valley|Balsas ᎤᏪᏴ ᎤᎨᏓᎵᏴ]] ᎤᎦᎾᏭ ᎢᏗᏢ [[ᎺᎯᎪ]], ᎬᏙᏗ ᎦᎸᎳᏗᏢ 12% Ꮝ ᎠᏛᎯᏍᏙᏗ ᏭᏚᎸᏛ ᎬᏙᏗ ᎣᏤ ᎢᎬᏁᎸ ᏂᏛᎴᏅᏓ ''Zea ᎠᎾᏍᎬᏘ'' ssp. ''mexicana'' ᏗᎬᏩᎶᏒ ᎠᏴᏍᏙᏗ; 
 # ᎾᏍᎩ ᏗᎫᎪᏔᏅ ᏂᏛᎴᏅᏓ hybridization ᎠᏰᎵ ᎤᏍᏗ ᎫᏄᏡᏂ maize—a ᎠᏍᏓᏩᏛᏍᏗ ᎦᏁᏟᏴᏓ ᎤᏙᏢᏒ ᎨᏯᏔᎯ maize—and teosinte ᎾᎿ ᎨᏒ ''Luxuriantes'', ᎢᏳᏍᏗᏊ ''Z. luxurians'' ᎠᎴ ''Z. diploperennis''; 
 # ᎾᏍᎩ underwent ᏔᎵ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎦᎷᎯᏍᏗ ᎢᏳᏍᏗᏊ ᎨᏯᏔᎯ ᏎᎷ ᎠᎴ teosinte; 
 # ᎾᏍᎩ ᏚᏙᎳᏩᏛᎲ ᏂᏛᎴᏅᏓ hybridization ''Z. diploperennis'' ᎾᎥᎢ ''Tripsacum dactyloides''.  (ᎯᎠ ᎠᎴᏂᏍᎬ "teosinte" ᏄᏍᏛ ᎧᏃᎮᏗ ᏂᎦᏛ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎠᎴ subspecies ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''Zea'', ᎧᏃᎯᏯᏍᏗ ''Zea ᎠᎾᏍᎬᏘ'' ssp. ''ᎠᎾᏍᎬᏘ''.)  ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ 1930s, Paul Mangelsdorf ᎧᏁᎢᏍᏔᏅ Ꮎ ᎫᏄᏡᏂ ᏎᎷ ᏥᏄᏍᏛᎩ ᎯᎠ ᏄᎵᏍᏔᏅ hybridization ᏂᎦᎵᏍᏔᏂᏙᎲ ᎠᏰᎵ ᎤᎧᏁᎳ ᎨᏯᏔᎯ ᏎᎷ ᎠᎴ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''Tripsacum'', ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.  ᏱᏂᎬᏛᎾ, ᎯᎠ ᎧᏁᎢᏍᏔᏅ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ tripsacum ([[gama|ᎦᎹ]] ᎧᏁᏍᎦ) ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᏎᎷ ᎤᎭ ᏭᏪᏙᎢ ᎦᎵᏓᏍᏛ ᎾᎥᎢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᏛᎯᏍᏙᏗ ᏗᎫᎪᏙᏗ ᎢᎬᏁᏗ, negating Mangelsdorf’s ᏗᏟᎶᏍᏙᏗ ᎠᎴ ᎯᎠ ᏅᎩᏁ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎦᎸᎳᏗᏢ.  
@@ -65,11 +65,11 @@
 ᎯᎠ ᏦᎢᏁ ᏗᏟᎶᏍᏙᏗ (ᎤᏙᎯᏳᎯᏯ ᎤᎾᏓᏟᏌᎲ hypotheses) ᎨᏒᎢ ᎤᏓᏂᎳᎯᎨ.  ᎯᎠ ᏔᎵᏁ ᎠᎵᏏᏅᏙᏗ ᏕᎪᏏᏏ ᎤᎪᏗᏗ ᎾᏍᏋ ᎠᎴ ᎨᏒᎢ dauntingly ᏂᎦᏛ.  ᎯᎠ ᎢᎬᏱ ᏗᏟᎶᏍᏙᏗ ᏥᏄᏍᏛᎩ ᎧᏁᎢᏍᏔᏅ ᎾᎥᎢ [[Nobel Prize|Nobel ᎠᏌᏍᏛ]] winner [[George Beadle|George ᎠᏍᏚᏙᏗ]] ᎭᏫᎾᏗᏢ 1939, ᎠᎴ ᎾᏍᎩ ᎤᎭ ᎠᎦᏛᏗ ᏄᏍᏛ ᎠᎵᏍᏕᎸᏗ, ᎠᎴ ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎪᏏᏌᏅᎯ:
 # ᎯᎳᎪ ᎯᎠ ᎤᎪᏗᏗ ᏧᏓᎴᎿᎢ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ''Zea'' originated, 
 # ᎯᎳᎪ ᎯᎠ ᎤᏍᏗ ᏧᏆᎫᏔᏅᏒ ᏗᎪᎥᎯ 3500–2700 BCE (uncorrected) ᏰᎵᏇ ᎤᎭ ᏭᏪᏙᎢ ᎠᏑᏰᏛ ᏂᏛᎴᏅᏓ teosinte, 
-# ᎯᎳᎪ ᎦᎷᎯᏍᏗ ᏰᎵᏇ ᎤᎭ ᏗᏱᎸᏓ ᏄᏠᏯᏍᏛᎾ ᎠᏓᏅᏍᎦ ᎤᎾᎵᏃᎯᏴᎯ teosinte ᎠᎴ ᏎᎷ ᎬᏙᏗ teosintoid ᏫᏚᏳᎪᏛ iyuwakodi ca. 1100 BCE, 
+# ᎯᎳᎪ ᎦᎷᎯᏍᏗ ᏰᎵᏇ ᎤᎭ ᏗᏱᎸᏓ ᏄᏠᏯᏍᏛᎾ ᎠᏓᏅᏍᎦ ᎤᎾᎵᏃᎯᏴᎯ teosinte ᎠᎴ ᏎᎷ ᎬᏙᏗ teosintoid ᏫᏚᏳᎪᏛ ᎢᏳᏩᎣᏗ ca. 1100 BCE, 
 # ᎠᎴ ᏐᎢ ᏗᎦᏎᏍᏙᏗ.
-[[File:Guila Naquitz cave.jpg|right|thumbnail|Guila Naquitz ᎤᏍᏔᎦᎳᏱ, ᏄᏍᏗᏓᏅ ᎯᎠ lyudetiyvda ᎤᎾᏅᏛ ᎤᎾᎵᏃᎯᏴᎯ ᏎᎷ]]
+[[File:Guila Naquitz cave.jpg|right|thumbnail|Guila Naquitz ᎤᏍᏔᎦᎳᏱ, ᏄᏍᏗᏓᏅ ᎯᎠ ᏳᏕᏘᏴᏓᎤᎾᏅᏛ ᎤᎾᎵᏃᎯᏴᎯ ᏎᎷ]]
 
-ᎯᎠ ᎦᎷᎯᏍᏗ ᏎᎷ ᎨᏒᎢ ᎾᏍᎩᎾ ᎤᏁᏉᏨ researchers—[[archaeologist|ᏗᏕᎶᏆᏍᎩ]], [[genetics|geneticists]], [[ethnobotany|ethnobotanists]], geographers, ᎠᎴ ᎤᏠᏯᏍᏗ.  ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ ᎨᏒᎢ ᏁᎵᏒ ᎾᎥᎢ ᎢᎦᏛ ᎤᎭ ᎤᏂᎩᏍᏔᏅ ᏂᏛᎴᏅᏓ 7,500 12,000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ (ᎪᏢᎯᏌᏅ ᎾᏍᎩᎾᎢ ᎡᎶᎯ ᏗᎧᏃᎩᏛ). ᎾᏞᎬ ᎠᏛᎯᏍᏙᏗ ᎪᎯᏳᏙ ᎠᏂᏁᎢᏍᏗ Ꮎ ᏎᎷ ᎦᎷᎯᏍᏗ occured 9000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ ᎭᏫᎾᏗᏢ ᎠᏰᎵ  ᎺᎯᎪ, ᎠᏎᏱᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᏂᎦᏛᎢ ᎠᏰᎵ [[Oaxaca]] ᎠᎴ [[Jalisco]].[http://www.maizegenetics.net/publications/Matsuoka2002PNAS.pdf] ᎯᎠ ᎨᏯᏔᎯ teosinte ᎤᎪᏗᏗ ᎤᏠᏱ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏎᎷ ᎠᏛᏍᎦ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ ᎯᎠ [[Balsas River|Balsas ᎤᏪᏴ]]. tsuqagutanvsv ᎤᎾᎵᏃᎯᏴᎯ ᎢᎬᏱ ᏎᎷ ᎠᏫᏗᏍᎩ, ᎠᏩᏛᏗ ᎾᎾᎢ Guila Naquitz ᎤᏍᏔᎦᎳᏱ ᎭᏫᎾᏗᏢ ᎯᎠ Oaxaca ᎤᎨᏓᎵᏴ, ᎢᏳ ᎢᎪᎯ ᎦᏐᎯ ᎾᎥᏂᎨᏍᏙᏗ 6,250 ᏧᏕᏘᏴᏓ (ᎪᏢᎯᏌᏅ; 3450 BCE, uncorrected); ᎯᎠ lyudetiyvda ᎠᏫᏗᏍᎩ ᏂᏛᎴᏅᏓ ᎤᏍᏔᎦᎳᏱ ᎾᎥᏂᎨ [[Tehuacan]], Puebla, ᎢᏳ ᎢᎪᎯ ca. 2750 BCE. ᎤᏍᏗ ᏧᎾᏍᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎩ ᎤᏙᏢᏒ ᎢᏳᎳᎪᏗ ca. 1100 BCE ᎯᎳᎪ ᎢᏳ ᎡᏆ ᏗᎦᏁᏟᏴᏍᏗ ᎤᎾᏄᎪᏨ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎩ ᏂᏛᎴᏅᏓ ᎠᏍᏆᏂ ᎤᏍᏔᎦᎳᏱ: ᏎᎷ ᏧᏓᎴᎿᎢ ᎤᎵᏍᏓᎯᎨ ᎤᏁᏉᏨᎯ ᎠᎴ tsuqagutanvsv teosinte ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᏓᏍᏆᏂᎪᏔᏅ.
+ᎯᎠ ᎦᎷᎯᏍᏗ ᏎᎷ ᎨᏒᎢ ᎾᏍᎩᎾ ᎤᏁᏉᏨ researchers—[[archaeologist|ᏗᏕᎶᏆᏍᎩ]], [[genetics|geneticists]], [[ethnobotany|ethnobotanists]], geographers, ᎠᎴ ᎤᏠᏯᏍᏗ.  ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ ᎨᏒᎢ ᏁᎵᏒ ᎾᎥᎢ ᎢᎦᏛ ᎤᎭ ᎤᏂᎩᏍᏔᏅ ᏂᏛᎴᏅᏓ 7,500 12,000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ (ᎪᏢᎯᏌᏅ ᎾᏍᎩᎾᎢ ᎡᎶᎯ ᏗᎧᏃᎩᏛ). ᎾᏞᎬ ᎠᏛᎯᏍᏙᏗ ᎪᎯᏳᏙ ᎠᏂᏁᎢᏍᏗ Ꮎ ᏎᎷ ᎦᎷᎯᏍᏗ occured 9000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ ᎭᏫᎾᏗᏢ ᎠᏰᎵ  ᎺᎯᎪ, ᎠᏎᏱᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᏂᎦᏛᎢ ᎠᏰᎵ [[Oaxaca]] ᎠᎴ [[Jalisco]].[http://www.maizegenetics.net/publications/Matsuoka2002PNAS.pdf] ᎯᎠ ᎨᏯᏔᎯ teosinte ᎤᎪᏗᏗ ᎤᏠᏱ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏎᎷ ᎠᏛᏍᎦ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ ᎯᎠ [[Balsas River|Balsas ᎤᏪᏴ]]. ᏧᎠᎫᏔᏅᏒ  ᎤᎾᎵᏃᎯᏴᎯ ᎢᎬᏱ ᏎᎷ ᎠᏫᏗᏍᎩ, ᎠᏩᏛᏗ ᎾᎾᎢ Guila Naquitz ᎤᏍᏔᎦᎳᏱ ᎭᏫᎾᏗᏢ ᎯᎠ Oaxaca ᎤᎨᏓᎵᏴ, ᎢᏳ ᎢᎪᎯ ᎦᏐᎯ ᎾᎥᏂᎨᏍᏙᏗ 6,250 ᏧᏕᏘᏴᏓ (ᎪᏢᎯᏌᏅ; 3450 BCE, uncorrected); ᎯᎠ ᏳᏕᏘᏴᏓ ᎠᏫᏗᏍᎩ ᏂᏛᎴᏅᏓ ᎤᏍᏔᎦᎳᏱ ᎾᎥᏂᎨ [[Tehuacan]], Puebla, ᎢᏳ ᎢᎪᎯ ca. 2750 BCE. ᎤᏍᏗ ᏧᎾᏍᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎩ ᎤᏙᏢᏒ ᎢᏳᎳᎪᏗ ca. 1100 BCE ᎯᎳᎪ ᎢᏳ ᎡᏆ ᏗᎦᏁᏟᏴᏍᏗ ᎤᎾᏄᎪᏨ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎩ ᏂᏛᎴᏅᏓ ᎠᏍᏆᏂ ᎤᏍᏔᎦᎳᏱ: ᏎᎷ ᏧᏓᎴᎿᎢ ᎤᎵᏍᏓᎯᎨ ᎤᏁᏉᏨᎯ ᎠᎴ ᏧᎠᎫᏔᏅᏒ teosinte ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᏓᏍᏆᏂᎪᏔᏅ.
 
 ᎠᏎᏱᎩ ᏥᏄᏍᏗ ᎢᎬᏱ ᏥᏄᏍᏗ 1500 BC, ᏎᎷ ᎤᎴᏅᎲ ᎠᏰᏍᏛᏗ ᏂᎬᎢ ᎠᎴ ᎤᎵᏍᏓᎯᎨ.  ᏥᏄᏍᏗ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎢᏤ ᎥᎦᏔᎲᎢ, ᎢᏤ ᎬᏔᏂᏓᏍᏗ ᎨᏒᎩ ᎤᏙᎷᏩᏛᏓ ᎠᎴ ᎢᏤ varieties ᎠᏑᏰᏛ ᎤᏟ ᎢᏲᏍᏛ ᎢᏯᏓᏛᏁᏗ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎠᏛᏅᎢᏍᏔᏅ.  ᏎᎷ ᏥᏄᏍᏛᎩ ᎯᎠ ᏕᎬᏔᏛ ᎠᎵᏍᏓᏴᏗ, ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᏕᎬᏔᏛ, ᎤᎪᏗᏗ ᎯᎠ [[pre-Columbian|ᎬᏂᎨᏒ ᏄᏍᏛᎢ-Columbian]] [[ᏧᏴᏢ ᎠᎹᏰᎵ]], [[Mesoamerican]], [[ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], ᎠᎴ [[Caribbean]] ᎥᎦᏔᎲᎢ.  ᎾᎯᏳᎨᏒ ᎯᎠ [[1st millennium|1st ᎠᎴᏫᏍᏙᏗ]] CE (ᏂᏓᏙᎳᎬᎾ), ᏎᎷ ᏗᎦᎶᎪᏗ ᎠᏰᏍᏛᏗ ᏂᏛᎴᏅᏓ [[Mexico|ᎠᏂᏍᏆᏂᎢ]] ᎾᎾᎯ ᎯᎠ [[U.S. Southwest|Ꭴ.. Southwest]] ᎠᎴ ᎠᎴᏫᏍᏙᏗ ᎣᏂᏯᎨᏍᏙᏗ ᎾᎾᎯ [[northeastern U.S.|northeastern Ꭴ..]] ᎠᎴ ᎤᎦᎾᏭ ᎧᎸᎬ Canada, ᏧᎾᏍᏗ ᎯᎠ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᏥᏄᏍᏗ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏧᎸᏌᏛᎯ ᎡᏆ ᎠᏙᎯ ᎢᎾᎨ ᎠᎴ grassland ᎡᏍᎦᏂ ᎾᏍᎩᎾᎢ ᎯᎠ ᎢᏤ ᏠᎨᏏ ᎠᏫᏒ.  [[Gavin Menzies]], ᎭᏫᎾᏗᏢ ᎤᏤᎵ ᎪᏪᎵ ''[[1421 hypothesis|1421 - ᎯᎠ ᏑᏕᏘᏴᏓ ᎠᎦᎾᏫᏗᏍᎩ ᎪᎷᏩᏛᏓ ᎯᎠ ᎡᎶᎯ]]'', ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᎤᎾᏛᏁᎸᏗ Ꮎ ᏎᎷ ᏥᏄᏍᏛᎩ ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ transplanted ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎺᎵᎨ ᎾᎥᎢ ᎯᎠ Chinese ᎾᎯᏳᎨᏒ ᎤᎾᏤᎵ ᎡᏆ ᎠᏌᎳᏙᏗ ᎯᎠ 15th sqohitsuqui tsudetiyvdi (ᎾᏍᎩ ᎤᏁᎳᎩ ᎪᎯ ᎠᏆᏤᎵ ᎠᏛᏗ ᎨᏒᎢ ᏂᎬᎢ disputed [http://www.hallofmaat.com/modules.php?name=Articles&file=article&sid=91]). 
 
