*Empty MediaWiki Message*

--- a/ᏃᏈᏏ.mw
+++ b/ᏃᏈᏏ.mw
@@ -1,9 +1,9 @@
 [[File:Bob Star - M45 Carranza Field (by).jpg|thumb|Pleiades]]
 '''ᏃᏈᏏ''' [[Sun|ᏅᏙ ᎢᎦ ᎡᎯ]]. Unlike [[planet]], ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎤᎪᏗᏗ ᎠᏨᏍᏛ ᎨᏒᎢ reflected, ᏃᏈᏏ emits ᎠᏨᏍᏛ ᎢᎬᏂᏏᏍᎩ Ꮝ ᎤᎶᏒᏍᏗ [[blackbody radiation|ᎤᎦᎾᏭ]]. Scientifically, ᎠᏂᏃᏈᏏ ᎠᎴ ᎧᏁᎢᏍᏔᏅᎯ ᏥᏄᏍᏗ [[Gravity#Self-gravitating system|ᎣᏩᏒ-gravitating]] spheres plasma ᎭᏫᎾᏗᏢ [[hydrostatic equilibrium]], ᎦᏙ ᎤᏍᏗ generate ᎤᎾᏤᎵ ᎣᏤᎵ [[energy|ᏄᎵᏂᎬᎬ]] ᏗᎬᏩᎶᏒ ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ [[nuclear fusion]]. [[Stellar astronomy]] ᎨᏒᎢ ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᎠᏂᏃᏈᏏ.
 
-ᎠᏂᏏᏴᏫᎭ ᎠᏂᏃᏈᏏ ᏚᏓᎴᎿᎥ ᏂᏛᎴᏅᏓ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎤᏍᏆᎸᎲ ᎤᎾᏤᎵ ᏂᎦᏛ ᎦᏟᏌᏅ ᎦᏟᏌᏅ ᎤᎪᏗᏗ, ᎤᎾᏤᎵ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ, ᎠᎴ ᎤᎾᏤᎵ lyudetiyvda. ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᎦᏟᏌᏅ ᎤᎪᏗᏗ determines ᎯᎠ ᏫᏚᏳᎪᏛ evolution ᏃᏈᏏ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ Ꮝ eventual ᎢᏳᏓᎵᏍᏓᏁᏗ. [[Hertzsprung-Russell diagram|Hertzsprung-Russell ᎠᏓᏕᏲᎲᏍᎩ ᎪᏪᎸ]] ᏓᎾᏛᏁᎵᏍᎬ ᎯᎠ ᏗᏟᎶᏍᏙᏗ ᎯᎠ ᏄᏁᏌᏴᏢ ᎠᏂᏃᏈᏏ ᏗᎦᏘᎴᎩ ᎤᎾᏤᎵ ᎤᏙᎯᏳᎯᏯ magnitude, ᎠᎴ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ ᏗᎫᎪᏙᏗ ᎯᎠ overall lyudetiyvda ᏃᏈᏏ ᎠᎴ ᎯᎠ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎭᏫᎾᏗᏢ Ꮝ evolution. Initially, ᎠᏂᏃᏈᏏ ᎠᎴ composed ᎢᎬᏱᏗᏢ [[hydrogen]], ᎬᏙᏗ ᎢᎦᏛ [[helium]] ᎠᎴ ᎦᎨᏓᎨ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏧᏓᎴᎩ Ꮎ ᏗᎫᎪᏙᏗ ᎯᎠ [[metallicity]] ᏃᏈᏏ. ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏫᏚᏳᎪᏛ ᏃᏈᏏ ᎤᏤᎵ evolution, ᎢᎦᏛ ᎯᎠ hydrogen ᎨᏒᎢ converted ᎾᎾᎯ ᎦᎨᏓᎨ ᎢᏧᏓᎴᎩ ᏗᎬᏩᎶᏒ ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ nuclear fusion. ᎢᎦᏛ ᎯᎠ ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᎨᏒᎢ ᎾᎯᏳᎢ recycled ᎦᏐᎯ ᎾᎾᎯ ᎯᎠ interstellar environment, ᎭᏢᏃ ᎾᏍᎩ ᎨᏒᎢ ᎬᏔᏅᎯ ᎤᏙᏢᏒ ᎢᏤ ᎤᎾᏁᎶᏔᏅ ᎤᏟ ᎢᎦᎢ [[metal-rich|ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ-ᎤᏪᎾᎢ]] ᎠᏂᏃᏈᏏ.
+ᎠᏂᏏᏴᏫᎭ ᎠᏂᏃᏈᏏ ᏚᏓᎴᎿᎥ ᏂᏛᎴᏅᏓ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎤᏍᏆᎸᎲ ᎤᎾᏤᎵ ᏂᎦᏛ ᎦᏟᏌᏅ ᎦᏟᏌᏅ ᎤᎪᏗᏗ, ᎤᎾᏤᎵ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ, ᎠᎴ ᎤᎾᏤᎵ ᏳᏕᏘᏴᏓ. ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᎦᏟᏌᏅ ᎤᎪᏗᏗ determines ᎯᎠ ᏫᏚᏳᎪᏛ evolution ᏃᏈᏏ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ Ꮝ eventual ᎢᏳᏓᎵᏍᏓᏁᏗ. [[Hertzsprung-Russell diagram|Hertzsprung-Russell ᎠᏓᏕᏲᎲᏍᎩ ᎪᏪᎸ]] ᏓᎾᏛᏁᎵᏍᎬ ᎯᎠ ᏗᏟᎶᏍᏙᏗ ᎯᎠ ᏄᏁᏌᏴᏢ ᎠᏂᏃᏈᏏ ᏗᎦᏘᎴᎩ ᎤᎾᏤᎵ ᎤᏙᎯᏳᎯᏯ magnitude, ᎠᎴ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ ᏗᎫᎪᏙᏗ ᎯᎠ overall ᏳᏕᏘᏴᏓ ᏃᏈᏏ ᎠᎴ ᎯᎠ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎭᏫᎾᏗᏢ Ꮝ evolution. Initially, ᎠᏂᏃᏈᏏ ᎠᎴ composed ᎢᎬᏱᏗᏢ [[hydrogen]], ᎬᏙᏗ ᎢᎦᏛ [[helium]] ᎠᎴ ᎦᎨᏓᎨ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏧᏓᎴᎩ Ꮎ ᏗᎫᎪᏙᏗ ᎯᎠ [[metallicity]] ᏃᏈᏏ. ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏫᏚᏳᎪᏛ ᏃᏈᏏ ᎤᏤᎵ evolution, ᎢᎦᏛ ᎯᎠ hydrogen ᎨᏒᎢ converted ᎾᎾᎯ ᎦᎨᏓᎨ ᎢᏧᏓᎴᎩ ᏗᎬᏩᎶᏒ ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ nuclear fusion. ᎢᎦᏛ ᎯᎠ ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᎨᏒᎢ ᎾᎯᏳᎢ recycled ᎦᏐᎯ ᎾᎾᎯ ᎯᎠ interstellar environment, ᎭᏢᏃ ᎾᏍᎩ ᎨᏒᎢ ᎬᏔᏅᎯ ᎤᏙᏢᏒ ᎢᏤ ᎤᎾᏁᎶᏔᏅ ᎤᏟ ᎢᎦᎢ [[metal-rich|ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ-ᎤᏪᎾᎢ]] ᎠᏂᏃᏈᏏ.
 
-[[Binary star|Multi-ᏃᏈᏏ systems]] ᎤᏠᏯᏍᏗ ᏔᎵ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎠᏂᏃᏈᏏ Ꮎ ᎠᎴ gravitationally ᏩᎦᏛ, ᎠᎴ ᏂᎦᎥᏊ ᎠᏓᏅᏍᏗ ᏴᏩyvwatuwidv ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎭᏫᎾᏗᏢ ᏐᏈᎵ ᎤᏂᏴᏍᏗ orbits. ᎯᎳᎪ ᎢᏳ ᏔᎵ ᏯᏛᎿ ᎠᏂᏃᏈᏏ ᎤᎭ ᏗᎦᏃᏢᎩ ᎠᏍᏚᏗ orbit, ᎤᎾᏤᎵ gravitational interaction ᏰᎵᏇ ᎤᎭ significant ᏓᏓᏛᎾᏍᏗᏍᎬ ᎾᎿ ᎤᎾᏤᎵ evolution. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, [[nova]] occurs ᎯᎳᎪ ᎢᏳ [[white dwarf|ᎤᏁᎬ dwarf]] [[Accretion|accretes]] ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᏂᏛᎴᏅᏓ ᎠᎾᎵᎪᎲᏍᎩ ᏃᏈᏏ.
+[[Binary star|Multi-ᏃᏈᏏ systems]] ᎤᏠᏯᏍᏗ ᏔᎵ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎠᏂᏃᏈᏏ Ꮎ ᎠᎴ gravitationally ᏩᎦᏛ, ᎠᎴ ᏂᎦᎥᏊ ᎠᏓᏅᏍᏗ ᏴᏩᏴᏩᎤᏫᏛ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎭᏫᎾᏗᏢ ᏐᏈᎵ ᎤᏂᏴᏍᏗ orbits. ᎯᎳᎪ ᎢᏳ ᏔᎵ ᏯᏛᎿ ᎠᏂᏃᏈᏏ ᎤᎭ ᏗᎦᏃᏢᎩ ᎠᏍᏚᏗ orbit, ᎤᎾᏤᎵ gravitational interaction ᏰᎵᏇ ᎤᎭ significant ᏓᏓᏛᎾᏍᏗᏍᎬ ᎾᎿ ᎤᎾᏤᎵ evolution. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, [[nova]] occurs ᎯᎳᎪ ᎢᏳ [[white dwarf|ᎤᏁᎬ dwarf]] [[Accretion|accretes]] ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᏂᏛᎴᏅᏓ ᎠᎾᎵᎪᎲᏍᎩ ᏃᏈᏏ.
 
 == ᏃᏈᏏ formation ᎠᎴ evolution ==
 {{main|stellar evolution}}
@@ -11,7 +11,7 @@
 
 ᎠᏂᏃᏈᏏ ᎤᏩᏍᎬ ᎬᏩᏚᏫᏛ 90% ᎤᎾᏤᎵ lifetime [[nuclear fusion|fusing]] [[hydrogen]] ᎠᏛᎯᏍᏙᏗ [[helium]] ᎭᏫᎾᏗᏢ ᎦᎸᎳᏗ-ᏄᏁᏌᏴᏢ ᎠᎴ ᎦᎸᎳᏗ-pressure reactions ᎾᎥᏂᎨ ᎯᎠ ᎠᏰᎵ. ᏯᏛᎿ ᎠᏂᏃᏈᏏ ᎠᎴ ᏄᏪᏒᎩ ᎾᏍᏋ ᎾᎿ ᎯᎠ [[main sequence|ᏄᎬᏫᏳᏒ sequence]].
 
-ᎤᏍᏗ ᎠᏂᏃᏈᏏ (ᎤᏯᏅᎲ [[red dwarf|ᎩᎦᎨ dwarf]]) ᎦᎴᏴᏒ ᎤᎾᏤᎵ ᎪᏛᏙᏗ ᎤᏙᎯᏳ ᎷᏍᎦᏃᎵ ᎠᎴ ᎣᏂ tens ᎢᏯᏍᎪᎯᏧᏈ billions ᏧᏕᏘᏴᏓ. ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎤᎾᏤᎵ ᎠᎴᏂᏙᎠ, ᎤᏅᏌ ᏄᏦᏍᏛᎾᏊ ᏗᏙᎳᎩ dimmer ᎠᎴ dimmer, fading ᎾᎾᎯ [[black dwarf|ᎬᎿᎨ dwarf]]. ᏱᏂᎬᏛᎾ, ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ lifespan ᏯᏛᎿ ᎠᏂᏃᏈᏏ ᎨᏒᎢ ᎡᏆ ᎢᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ lyudetiyvda ᎯᎠ universe (13.7 billion ᏧᏕᏘᏴᏓ), Ꮭ ᎬᎿᎨ dwarfs ᎬᏂᎨᏒ ᏄᏍᏗ ᎩᎳ.
+ᎤᏍᏗ ᎠᏂᏃᏈᏏ (ᎤᏯᏅᎲ [[red dwarf|ᎩᎦᎨ dwarf]]) ᎦᎴᏴᏒ ᎤᎾᏤᎵ ᎪᏛᏙᏗ ᎤᏙᎯᏳ ᎷᏍᎦᏃᎵ ᎠᎴ ᎣᏂ tens ᎢᏯᏍᎪᎯᏧᏈ billions ᏧᏕᏘᏴᏓ. ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎤᎾᏤᎵ ᎠᎴᏂᏙᎠ, ᎤᏅᏌ ᏄᏦᏍᏛᎾᏊ ᏗᏙᎳᎩ dimmer ᎠᎴ dimmer, fading ᎾᎾᎯ [[black dwarf|ᎬᎿᎨ dwarf]]. ᏱᏂᎬᏛᎾ, ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ lifespan ᏯᏛᎿ ᎠᏂᏃᏈᏏ ᎨᏒᎢ ᎡᏆ ᎢᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᏳᏕᏘᏴᏓ  ᎯᎠ universe (13.7 billion ᏧᏕᏘᏴᏓ), Ꮭ ᎬᎿᎨ dwarfs ᎬᏂᎨᏒ ᏄᏍᏗ ᎩᎳ.
 
 ᏥᏄᏍᏗ ᎤᎪᏗᏗ ᎠᏂᏃᏈᏏ exhaust ᎤᎾᏤᎵ ᎠᏓᏁᏗ hydrogen, ᎤᎾᏤᎵ outer layers expand ᎠᎴ ᎤᏁᏌᏴᏟ ᎤᏙᏢᏒ [[red giant|ᎩᎦᎨ giant]]. ᎭᏫᎾᏗᏢ ᎬᏩᏚᏫᏛ 5 billion ᏧᏕᏘᏴᏓ, ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᎨᏒᎢ ᎩᎦᎨ giant, ᎾᏍᎩ ᏫᎵ ᎾᏍᏋ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎡᏆ Ꮎ ᎾᏍᎩ ᏫᎵ consume ᎢᏧᎳ [[Mercury (planet)|Mercury]] ᎠᎴ [[Venus (planet)|Venus]]. ᏭᎵᏱᎶᎸ ᎯᎠ ᎠᏰᎵ ᎨᏒᎢ compressed ᏰᎵᏊ ᎠᏂᎩᏍᏗ [[helium]] fusion, ᎠᎴ ᎯᎠ ᏃᏈᏏ heats ᎦᎸᎳᏗᏢ ᎠᎴ ᏚᎾᏓᏁᏤᎸ. ᎡᏆᎯᎨᏍᏙᏗ ᎠᏂᏃᏈᏏ ᏫᎵ ᎾᏍᎩ ᎾᏍᏇ fuse ᎦᎨᏓᎨ [[chemical element|ᎢᏧᏓᎴᎩ]], ᏂᎦᏛ ᎯᎠ ᎦᎶᎯᏍᏗ [[iron|ᏔᎷᎩᏍᎩ]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎯᎠ ᎤᎵᏍᏛ ᎪᏍᏓᏱ ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ. ᎣᏂ ᏧᏩᎫᏛ ᏔᎷᎩᏍᎩ nuclei ᎠᎴ ᎤᏟ ᎢᎦᎢ [[binding energy|tightly ᏩᎦᏛ]] ᎬᎾᏬᏍᎬ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎦᎨᏓᎨ nuclei, ᎢᏳᏃ ᎤᏅᏌ ᎠᎴ fused ᎤᏅᏌ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᏣᏥᏲᎯᏍᏗ ᏄᎵᏂᎬᎬ — ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ ᏯᏓᎢᏗᏏ ᎾᎿ ᎯᎠ ᎠᎵᏍᎦᏁᏍᎩ consume ᏄᎵᏂᎬᎬ. ᎾᏍᎩᏯᎢᎨᏙᏗ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏅᏌ ᎠᎴ ᎤᏟ ᎢᎦᎢ tightly ᏩᎦᏛ ᎬᎾᏬᏍᎬ ᏂᎦᏛ ᎤᏍᎪᏛᎭᎨ nuclei, ᏄᎵᏂᎬᎬ ᏝᏰᎵ ᎾᏍᏋ ᏓᏥᏲᏒᎩ ᎾᎥᎢ [[Nuclear fission|fission]]. ᎭᏫᎾᏗᏢ ᎠᎦᏴᎵ, ᎤᏙᎯᏳ massive ᎠᏂᏃᏈᏏ, ᎡᏆ ᎠᏰᎵ inert ᏔᎷᎩᏍᎩ ᏫᎵ ᎦᏒᏔᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ ᎯᎠ ᏃᏈᏏ.
 
@@ -19,7 +19,7 @@
 
 [[File:Crab Nebula.jpg|thumb|200px|right|The [[Crab Nebula]], remnants of a supernova which occurred around 1050 AD.]]
 
-In larger stars, defined as >1.4 solar masses ᎤᎶᏐᏅ explosion, fusion ᏫᎬᎵᏱᎴᎩ until ᏔᎷᎩᏍᎩ ᎠᏰᎵ accumulates Ꮎ ᎨᏒᎢ too ᎡᏆ ᎾᏍᏋ ᎤᎵᏍᏕᎸᎲ ᎾᎥᎢ [[electron degeneracy pressure]]. ᎪᎯ ᎠᏰᎵ ᏫᎵ ᏄᎵᏍᏛᏊ collapse ᏥᏄᏍᏗ Ꮝ electrons ᎠᎴ ᎤᏱᎵᏒᎩ ᎾᎾᎯ Ꮝ protons, forming neutrons ᎠᎴ neutrinos ᎭᏫᎾᏗᏢ ᎤᏣᎷᏘᏓ [[electron capture|inverse beta decay]]. ᎯᎠ [[shockwave]] ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎾᎥᎢ ᎪᎯ ᎤᎳᏂᎩᏓ collapse ᏂᏕᎬᏂᏏᏍᎬ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᏃᏈᏏ explode ᎭᏫᎾᏗᏢ [[supernova]]. Supernovae ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏧᎸᏌᏓ Ꮎ ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᏍᏆᎳᎯᎨᏍᏙᏗ outshine ᎯᎠ ᏃᏈᏏ ᎤᏤᎵ ᏂᎦᏛ ᎣᏪᏅᏒ galaxy. ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᏄᎵᏍᏔᏅ ᎭᏫᏂᏗᏢ ᎯᎠ [[Milky Way|Milky ᎦᎶᎯᏍᏗ]], supernovae ᎤᎭ historically ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎾᎥᎢ ᎤᏰᎸᎭ-ᎠᎦagatoli observers ᏥᏄᏍᏗ "ᎢᏤ ᎠᏂᏃᏈᏏ" ᎭᏢᏃ ᎧᏂᎩᏛ existed ᎤᏓᎷᎸ. ᏭᎵᏱᎶᎸ, ᎤᎪᏗᏗ ᎯᎠ ᎢᏳᏍᏗ ᏯᏛᎿ ᎭᏫᎾᏗᏢ ᏃᏈᏏ ᎨᏒᎢ ᎤᏃᎸᏔᏅ ᎤᏣᏘᎾ ᎾᎥᎢ ᎯᎠ explosion (forming nebulae ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Crab Nebula]]) ᎠᎴ ᎦᏙ ᎤᏍᏗ ᎤᎾᎵᏃᎯᏴᎯ ᏫᎵ ᎾᏍᏋ [[neutron star|neutron ᏃᏈᏏ]] (sometimes [[pulsar]] ᎠᎴ [[X-ray burster]]) ᎠᎴ, ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎠᏂᏃᏈᏏ (>3 solar masses ᎤᎶᏐᏅ explosion), [[black hole|ᎬᎿᎨ ᎠᏔᎴᏒ]].
+In larger stars, defined as >1.4 solar masses ᎤᎶᏐᏅ explosion, fusion ᏫᎬᎵᏱᎴᎩ until ᏔᎷᎩᏍᎩ ᎠᏰᎵ accumulates Ꮎ ᎨᏒᎢ too ᎡᏆ ᎾᏍᏋ ᎤᎵᏍᏕᎸᎲ ᎾᎥᎢ [[electron degeneracy pressure]]. ᎪᎯ ᎠᏰᎵ ᏫᎵ ᏄᎵᏍᏛᏊ collapse ᏥᏄᏍᏗ Ꮝ electrons ᎠᎴ ᎤᏱᎵᏒᎩ ᎾᎾᎯ Ꮝ protons, forming neutrons ᎠᎴ neutrinos ᎭᏫᎾᏗᏢ ᎤᏣᎷᏘᏓ [[electron capture|inverse beta decay]]. ᎯᎠ [[shockwave]] ᎪᏢᎯ ᎢᎪᏢᎯ ᎢᏁᎸᎯ ᎾᎥᎢ ᎪᎯ ᎤᎳᏂᎩᏓ collapse ᏂᏕᎬᏂᏏᏍᎬ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᏃᏈᏏ explode ᎭᏫᎾᏗᏢ [[supernova]]. Supernovae ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏧᎸᏌᏓ Ꮎ ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᏍᏆᎳᎯᎨᏍᏙᏗ outshine ᎯᎠ ᏃᏈᏏ ᎤᏤᎵ ᏂᎦᏛ ᎣᏪᏅᏒ galaxy. ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᏄᎵᏍᏔᏅ ᎭᏫᏂᏗᏢ ᎯᎠ [[Milky Way|Milky ᎦᎶᎯᏍᏗ]], supernovae ᎤᎭ historically ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎾᎥᎢ ᎤᏰᎸᎭ-ᎠᎦagatoli observers ᏥᏄᏍᏗ "ᎢᏤ ᎠᏂᏃᏈᏏ" ᎭᏢᏃ ᎧᏂᎩᏛ existed ᎤᏓᎷᎸ. ᏭᎵᏱᎶᎸ, ᎤᎪᏗᏗ ᎯᎠ ᎢᏳᏍᏗ ᏯᏛᎿ ᎭᏫᎾᏗᏢ ᏃᏈᏏ ᎨᏒᎢ ᎤᏃᎸᏔᏅ ᎤᏣᏘᎾ ᎾᎥᎢ ᎯᎠ explosion (forming nebulae ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Crab Nebula]]) ᎠᎴ ᎦᏙ ᎤᏍᏗ ᎤᎾᎵᏃᎯᏴᎯ ᏫᎵ ᎾᏍᏋ [[neutron star|neutron ᏃᏈᏏ]] (sometimes [[pulsar]] ᎠᎴ [[X-ray burster]]) ᎠᎴ, ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎠᏂᏃᏈᏏ (>3 solar masses ᎤᎶᏐᏅ explosion), [[black hole|ᎬᎿᎨ ᎠᏔᎴᏒ]].
 
 ᎯᎠ ᎤᏃᎸᏔᏅ-ᎤᏣᏘᎾ outer layers ᎠᏲᎱᏍᎬ ᎠᏂᏃᏈᏏ ᎠᏠᏯᏍᏛ ᎦᎨᏛ ᎢᏧᏓᎴᎩ ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᎾᏍᏋ recycled ᎾᎯᏳᎨᏒ ᎢᏤ ᏃᏈᏏ formation. ᎾᏍᎩ ᎯᎠ ᎦᎨᏛ ᎢᏧᏓᎴᎩ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ formation rocky [[planet]]. ᎯᎠ outflow ᏂᏛᎴᏅᏓ supernovae ᎠᎴ ᎯᎠ [[solar wind|stellar ᎦᏃᎸᎥᏍᎬ]] ᎡᏆ ᎠᏂᏃᏈᏏ ᏗᏁᎶᏗ ᎤᎵᏍᎨᏛ ᎢᎦᏛ ᎭᏫᎾᏗᏢ shaping ᎯᎠ interstellar ᎠᏰᎵᏇ ᎢᏴ.
 
@@ -34,11 +34,11 @@ Astronomers ᎠᎦᏎᏍᏙᏗ Ꮎ ᎾᎿᎢ ᎠᎴ ᎾᎾᎢ least 70 [[sextill
 
 ᎤᏍᏗ (''dwarf'') ᎠᏂᏃᏈᏏ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Sun|ᏅᏙ ᎢᎦ ᎡᎯ]] ᏂᎦᎥᏊ ᎤᎭ essentially featureless disks ᎬᏙᏗ ᎾᏍᎩ ᎤᏩᏒ ᎤᏍᏗ [[sunspots|starspots]]. ᎡᏆᎯᎨᏍᏙᏗ (''giant'') ᎠᏂᏃᏈᏏ ᎤᎭ ᎤᏣᏘ ᎤᏔᏂᏗ, ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎠᎬᏂ starspots, ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏂᎨᏒ ᏂᎬᏅ ᎤᎳᏂᎩᏓ [[stellar limb-darkening|stellar ᎤᏩᏂᎦᎸ-darkening]] (ᎯᎠ brightness decreases ᏫᏂᏚᏳᎪᏛ ᎯᎠ ᎠᏍᏛᎢ ᎯᎠ stellar disk).
 
-== lyudetiyvda ᎠᎴ ᏂᎬᎢ ᎠᏂᏃᏈᏏ ==
+== ᏳᏕᏘᏴᏓ ᎠᎴ ᏂᎬᎢ ᎠᏂᏃᏈᏏ ==
 [[File:The sun1.jpg|thumb|200px|right|ᎯᎠ [[Sun|ᏅᏙ ᎢᎦ ᎡᎯ]] ᎨᏒᎢ ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ ᏃᏈᏏ  ᎡᎶᎯ.]]
-ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᏕᎴᎩ ᎬᏩᏚᏫᏛ ᏃᏈᏏ ᎨᏒᎢ ᏕᎫᎪᏔᏅ ᎾᎥᎢ Ꮝ ᎠᎴᏅᏘᏍᎬ overall ᎦᏟᏌᏅ ᎤᎪᏗᏗ, ᎠᏠᏯᏍᏗᏍᎩ Ꮝ destiny ᎠᎴ ᎢᏳᏓᎵᏍᏓᏁᏗ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ Ꮝ ᎤᎵᏍᎨᏛ characteristics, ᏯᏛᎿ ᏥᏄᏍᏗ lifespan, luminosity, ᎠᎴ ᏂᎬᎢ. ᎠᏂᏃᏈᏏ ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ ᏂᎬᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏍᏗ [[neutron star|neutron ᏃᏈᏏ]](ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏙᎯᏳᎯᏯ ᎤᏲᎱᏒ ᎠᏂᏃᏈᏏ) Ꮭ ᎤᏔᏂᏗ ᎬᎾᏬᏍᎬ ᎦᏚᎲᎢ, [[supergiant]]ᎾᏍᎩᏯᎢ [[Betelgeuse]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Orion constellation]], ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎬᏩᏚᏫᏛ 1,000 ᎢᏧᏩitsuwakodi ᎡᏆᎯᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ – ᎬᏩᏚᏫᏛ 1.6 billion [[kilometers]]. ᏱᏂᎬᏛᎾ, Betelgeuse ᎤᎭ ᎤᏣᏘ ᎡᎳᏗᎨ [[density]] ᎬᎾᏬᏍᎬ ᎯᎠ [[Sun|ᏅᏙ ᎢᎦ ᎡᎯ]]. ᎤᎪᏗᏗ ᎠᏂᏃᏈᏏ ᎠᎴ ᎠᏰᎵ 1 billion ᎠᎴ 10 billion ᏧᏕᏘᏴᏓ ᎠᎦᏴᎵ. ᎢᎦᏛ ᎠᏂᏃᏈᏏ ᎠᎾᏍᎬᏘ ᎢᏧᎳᎭ ᎾᏍᏋ ᎠᏍᏚᏗ 13.7 billion ᏧᏕᏘᏴᏓ ᎠᎦᏴᎵ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎯᎠ ᎠᎦᏎᏍᏔᏅ lyudetiyvda ᎯᎠ universe. (ᎠᎪᏩᏛᏗ [[Big Bang|ᎡᏆ Bang ᎪᎷᏩᏛᏗ]] ᎠᎴ [[stellar evolution]].) ᎯᎠ ᎤᏟ ᎢᎦᎢ massive ᎯᎠ ᏃᏈᏏ, ᎯᎠ ᏍᏆᎵᎯᎨᏍᏗ Ꮝ lifespan ᏫᎵ ᎾᏍᏋ, ᎢᎬᏱᏗᏢ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎡᏆ ᎢᎨᏍᏙᏗ star’s ᎦᏟᏌᏅ ᎤᎪᏗᏗ, ᎯᎠ ᎡᏆ ᎢᎨᏍᏙᏗ ᎯᎠ ᎢᎦᎢ ᎢᎦᏘ pressure ᎾᎿ Ꮝ ᎭᏫᏂ ᎠᏰᎵ, causing ᎯᎠ ᏃᏈᏏ ᎦᎴᏴᏒ Ꮝ hydrogen ᎪᏛᏙᏗ ᎭᏫᎾᏗᏢ ᎡᏆ ᎢᎨᏍᏙᏗ amounts ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏔᎵᏁ, ᎯᎠ ᎢᏴ depleting ᎯᎠ star’s ᎪᏛᏙᏗ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏓᎯᎨ. ᎯᎠ ᎤᎪᏗᏗ massive ᎠᏂᏃᏈᏏ ᎦᎴᏴᏒ ᎤᎾᏤᎵ ᎪᏛᏙᏗ ᎤᏙᎯᏳ ᎤᎵᏍᏓᎯᎨ ᎠᎴ ᎣᏂ ᎬᏩᏚᏫᏛ ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎾᎿ ᎢᎦᏘᎭ ᎢᎬᏁᎸ, ᎾᎯᏳᎢ ᎠᏂᏃᏈᏏ ᏭᏍᏗᎬᎢ ᎦᏟᏌᏅ ᎤᎪᏗᏗ (ᎤᏯᏅᎲ ᎩᎦᎨ dwarfs) ᎦᎴᏴᏒ ᎤᎾᏤᎵ ᎪᏛᏙᏗ ᎤᏙᎯᏳ ᎷᏍᎦᏃᎵ ᎠᎴ ᎣᏂ tens ᎢᏯᏍᎪᎯᏧᏈ billions ᏧᏕᏘᏴᏓ. ᎤᎪᏗᏗ ᎠᏆᏤᎵ ᎪᎵᏍᏗᏱ ᎠᏂᏃᏈᏏ ᎦᎷᎦ ᏂᏛᎴᏅᏓ theoretical models ᎠᎴ simulations, ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᎯᎠ models ᎠᎴ ᏚᎳᏏᏔᏅᎩ ᎾᎿ spectral observations ᎠᎴ ᏗᏟᎶᏛ ᎯᎠ diameters ᎠᏂᏃᏈᏏ. ᎯᎠ ᎢᎬᏱ measurement ᎯᎠ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᏃᏈᏏ ᏐᎢ ᎬᎾᏬᏍᎬ ᎠᏆᏤᎵ ᏅᏙ ᎢᎦ ᎡᎯ ᏥᏄᏍᏛᎩ ᎪᏢᏅᎯ ᎭᏫᎾᏗᏢ [[1921]] ᎾᎥᎢ [[Albert Abraham Michelson|Albert ᎡᏆᎭᎻ Michelson]] ᎾᎿ ᎯᎠ [[Mount Wilson Observatory#100 inch .282.5 m.29 Hooker telescope|Hooker ᎠᎧᏔᏘ]].
+ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᏕᎴᎩ ᎬᏩᏚᏫᏛ ᏃᏈᏏ ᎨᏒᎢ ᏕᎫᎪᏔᏅ ᎾᎥᎢ Ꮝ ᎠᎴᏅᏘᏍᎬ overall ᎦᏟᏌᏅ ᎤᎪᏗᏗ, ᎠᏠᏯᏍᏗᏍᎩ Ꮝ destiny ᎠᎴ ᎢᏳᏓᎵᏍᏓᏁᏗ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ Ꮝ ᎤᎵᏍᎨᏛ characteristics, ᏯᏛᎿ ᏥᏄᏍᏗ lifespan, luminosity, ᎠᎴ ᏂᎬᎢ. ᎠᏂᏃᏈᏏ ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ ᏂᎬᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏍᏗ [[neutron star|neutron ᏃᏈᏏ]](ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏙᎯᏳᎯᏯ ᎤᏲᎱᏒ ᎠᏂᏃᏈᏏ) Ꮭ ᎤᏔᏂᏗ ᎬᎾᏬᏍᎬ ᎦᏚᎲᎢ, [[supergiant]]ᎾᏍᎩᏯᎢ [[Betelgeuse]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Orion constellation]], ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎬᏩᏚᏫᏛ 1,000 ᎢᏧᏩᎢᏧᏩᎣᏗ ᎡᏆᎯᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ – ᎬᏩᏚᏫᏛ 1.6 billion [[kilometers]]. ᏱᏂᎬᏛᎾ, Betelgeuse ᎤᎭ ᎤᏣᏘ ᎡᎳᏗᎨ [[density]] ᎬᎾᏬᏍᎬ ᎯᎠ [[Sun|ᏅᏙ ᎢᎦ ᎡᎯ]]. ᎤᎪᏗᏗ ᎠᏂᏃᏈᏏ ᎠᎴ ᎠᏰᎵ 1 billion ᎠᎴ 10 billion ᏧᏕᏘᏴᏓ ᎠᎦᏴᎵ. ᎢᎦᏛ ᎠᏂᏃᏈᏏ ᎠᎾᏍᎬᏘ ᎢᏧᎳᎭ ᎾᏍᏋ ᎠᏍᏚᏗ 13.7 billion ᏧᏕᏘᏴᏓ ᎠᎦᏴᎵ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎯᎠ ᎠᎦᏎᏍᏔᏅ ᏳᏕᏘᏴᏓ  ᎯᎠ universe. (ᎠᎪᏩᏛᏗ [[Big Bang|ᎡᏆ Bang ᎪᎷᏩᏛᏗ]] ᎠᎴ [[stellar evolution]].) ᎯᎠ ᎤᏟ ᎢᎦᎢ massive ᎯᎠ ᏃᏈᏏ, ᎯᎠ ᏍᏆᎵᎯᎨᏍᏗ Ꮝ lifespan ᏫᎵ ᎾᏍᏋ, ᎢᎬᏱᏗᏢ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎡᏆ ᎢᎨᏍᏙᏗ star’s ᎦᏟᏌᏅ ᎤᎪᏗᏗ, ᎯᎠ ᎡᏆ ᎢᎨᏍᏙᏗ ᎯᎠ ᎢᎦᎢ ᎢᎦᏘ pressure ᎾᎿ Ꮝ ᎭᏫᏂ ᎠᏰᎵ, causing ᎯᎠ ᏃᏈᏏ ᎦᎴᏴᏒ Ꮝ hydrogen ᎪᏛᏙᏗ ᎭᏫᎾᏗᏢ ᎡᏆ ᎢᎨᏍᏙᏗ amounts ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏔᎵᏁ, ᎯᎠ ᎢᏴ depleting ᎯᎠ star’s ᎪᏛᏙᏗ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏓᎯᎨ. ᎯᎠ ᎤᎪᏗᏗ massive ᎠᏂᏃᏈᏏ ᎦᎴᏴᏒ ᎤᎾᏤᎵ ᎪᏛᏙᏗ ᎤᏙᎯᏳ ᎤᎵᏍᏓᎯᎨ ᎠᎴ ᎣᏂ ᎬᏩᏚᏫᏛ ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎾᎿ ᎢᎦᏘᎭ ᎢᎬᏁᎸ, ᎾᎯᏳᎢ ᎠᏂᏃᏈᏏ ᏭᏍᏗᎬᎢ ᎦᏟᏌᏅ ᎤᎪᏗᏗ (ᎤᏯᏅᎲ ᎩᎦᎨ dwarfs) ᎦᎴᏴᏒ ᎤᎾᏤᎵ ᎪᏛᏙᏗ ᎤᏙᎯᏳ ᎷᏍᎦᏃᎵ ᎠᎴ ᎣᏂ tens ᎢᏯᏍᎪᎯᏧᏈ billions ᏧᏕᏘᏴᏓ. ᎤᎪᏗᏗ ᎠᏆᏤᎵ ᎪᎵᏍᏗᏱ ᎠᏂᏃᏈᏏ ᎦᎷᎦ ᏂᏛᎴᏅᏓ theoretical models ᎠᎴ simulations, ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᎯᎠ models ᎠᎴ ᏚᎳᏏᏔᏅᎩ ᎾᎿ spectral observations ᎠᎴ ᏗᏟᎶᏛ ᎯᎠ diameters ᎠᏂᏃᏈᏏ. ᎯᎠ ᎢᎬᏱ measurement ᎯᎠ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᏃᏈᏏ ᏐᎢ ᎬᎾᏬᏍᎬ ᎠᏆᏤᎵ ᏅᏙ ᎢᎦ ᎡᎯ ᏥᏄᏍᏛᎩ ᎪᏢᏅᎯ ᎭᏫᎾᏗᏢ [[1921]] ᎾᎥᎢ [[Albert Abraham Michelson|Albert ᎡᏆᎭᎻ Michelson]] ᎾᎿ ᎯᎠ [[Mount Wilson Observatory#100 inch .282.5 m.29 Hooker telescope|Hooker ᎠᎧᏔᏘ]].
 
-ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ massive ᎠᏂᏃᏈᏏ ᎤᎾᏅᏛ ᎨᏒᎢ [[Eta Carinae]], ᎬᏙᏗ 100–150 ᎢᏧᏩitsuwakodi ᏥᏄᏍᏗ ᎤᏣᏘ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᏥᏄᏍᏗ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ, ᎠᎴ Ꮝ [[lifespan]] ᎨᏒᎢ ᎤᏙᎯᏳ ᏍᏆᎳᎢ, ᎠᎴᏂᏙᎲ ᎾᏍᎩ ᎤᏩᏒ ᎯᎸᏍᎩ ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎾᎾᎢ ᎤᎪᏗᏗ. ᎾᏞᎬ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᎥᎢ [[Donald Figer]], astronomer ᎾᎾᎢ ᎯᎠ [[Space Telescope Science Institute|ᎤᏜᏅᏛ ᎠᎧᏔᏘ ᎠᎦagatohvsdi ᏧᎾᏕᏲᏗ]] ᎭᏫᎾᏗᏢ [[Baltimore, Maryland]], ᎠᏂᏁᎢᏍᏗ Ꮎ 150 solar masses ᎨᏒᎢ ᎯᎠ ᎦᎸᎳᏗᏢ ᎠᏎᎸᎯ ᎠᏂᏃᏈᏏ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᏗᏓᎴᏂᏍᎬ ᎯᎠ universe. ᎾᏍᎩ ᎠᏍᎦᏯ ᎬᏔᏅᎯ ᎯᎠ [[Hubble Space Telescope|Hubble ᎤᏜᏅᏛ ᎠᎧᏔᏘ]] ᎠᎦᏎᏍᏙᏗ ᎬᏩᏚᏫᏛ ᎠᎦᏴᎵ ᎠᏂᏃᏈᏏ ᎭᏫᎾᏗᏢ ᎯᎠ [[Arches cluster]], massive ᎠᏲᎵ [[star cluster|ᏃᏈᏏ cluster]] ᎾᎥᏂᎨ ᎯᎠ [[Galactic Center|ᎠᏰᎵ  ᎯᎠ Milky ᎦᎶᎯᏍᏗ]], ᎠᎴ ᎠᏩᏛᏗ Ꮭ ᎠᏂᏃᏈᏏ ᎦᏬᎯᎸᏙᏗ Ꮎ ᎠᏎᎸᎯ despite statistical Ꭴutugi gvsv Ꮎ ᎾᎿᎢ ᎢᏳᏗᎾ ᎾᏍᏋ ᎯᎸᏍᎩ. ᎯᎠ ᎠᏓᏅᏖᏗ ᎾᏍᎩᎾᎢ ᎪᎯ ᎠᏎᎸᎯ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎧᎵᏬ ᏗᏙᎳᎩ ᎤᎾᏅᏛ, ᎠᎴ ᎯᎠ [[Eddington limit|Eddington ᎠᏎᎸᎯ]] ᎨᏒᎢ ᎢᎦᏛ ᎯᎠ ᎦᏬᎯᎵᏴᏛ. ᎯᎠ ᎤᏙᎯᏳ ᎢᎬᏱ ᎠᏂᏃᏈᏏ ᎤᏙᏢᏒ ᎤᎶᏐᏅ ᎯᎠ ᎡᏆ Bang ᎠᎾᏍᎬᏘ ᎤᎭ ᏭᏪᏙᎢ ᎡᏆᎯᎨᏍᏙᏗ, ᎦᎸᎳᏗᏢ 300 solar masses ᎠᎴ ᎤᏟ ᎢᎦᎢ, ᎤᏍᏆᎸᎲ ᎯᎠ ᎧᎵᏬᎯ ᏅᏙᎲᏅ ᎢᏧᏓᎴᎩ ᎦᎨᏓᎨ ᎬᎾᏬᏍᎬ [[lithium]] ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ. ᎪᎯ ᎤᎾᏁᎶᏔᏅ supermassive ᎠᏂᏃᏈᏏ ᎨᏒᎢ ᎦᏅᎯᏓ extinct, ᏱᏂᎬᏛᎾ, ᎠᎴ ᎾᏊ ᎾᏍᎩ ᎤᏩᏒ theoretical.
+ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ massive ᎠᏂᏃᏈᏏ ᎤᎾᏅᏛ ᎨᏒᎢ [[Eta Carinae]], ᎬᏙᏗ 100–150 ᎢᏧᏩᎢᏧᏩᎣᏗ ᏥᏄᏍᏗ ᎤᏣᏘ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᏥᏄᏍᏗ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ, ᎠᎴ Ꮝ [[lifespan]] ᎨᏒᎢ ᎤᏙᎯᏳ ᏍᏆᎳᎢ, ᎠᎴᏂᏙᎲ ᎾᏍᎩ ᎤᏩᏒ ᎯᎸᏍᎩ ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎾᎾᎢ ᎤᎪᏗᏗ. ᎾᏞᎬ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᎥᎢ [[Donald Figer]], astronomer ᎾᎾᎢ ᎯᎠ [[Space Telescope Science Institute|ᎤᏜᏅᏛ ᎠᎧᏔᏘ ᎠᎦᎠᎦᎣᎲᏍᏗ ᏧᎾᏕᏲᏗ]] ᎭᏫᎾᏗᏢ [[Baltimore, Maryland]], ᎠᏂᏁᎢᏍᏗ Ꮎ 150 solar masses ᎨᏒᎢ ᎯᎠ ᎦᎸᎳᏗᏢ ᎠᏎᎸᎯ ᎠᏂᏃᏈᏏ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᏗᏓᎴᏂᏍᎬ ᎯᎠ universe. ᎾᏍᎩ ᎠᏍᎦᏯ ᎬᏔᏅᎯ ᎯᎠ [[Hubble Space Telescope|Hubble ᎤᏜᏅᏛ ᎠᎧᏔᏘ]] ᎠᎦᏎᏍᏙᏗ ᎬᏩᏚᏫᏛ ᎠᎦᏴᎵ ᎠᏂᏃᏈᏏ ᎭᏫᎾᏗᏢ ᎯᎠ [[Arches cluster]], massive ᎠᏲᎵ [[star cluster|ᏃᏈᏏ cluster]] ᎾᎥᏂᎨ ᎯᎠ [[Galactic Center|ᎠᏰᎵ  ᎯᎠ Milky ᎦᎶᎯᏍᏗ]], ᎠᎴ ᎠᏩᏛᏗ Ꮭ ᎠᏂᏃᏈᏏ ᎦᏬᎯᎸᏙᏗ Ꮎ ᎠᏎᎸᎯ despite statistical Ꭴutugi gvsv Ꮎ ᎾᎿᎢ ᎢᏳᏗᎾ ᎾᏍᏋ ᎯᎸᏍᎩ. ᎯᎠ ᎠᏓᏅᏖᏗ ᎾᏍᎩᎾᎢ ᎪᎯ ᎠᏎᎸᎯ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎧᎵᏬ ᏗᏙᎳᎩ ᎤᎾᏅᏛ, ᎠᎴ ᎯᎠ [[Eddington limit|Eddington ᎠᏎᎸᎯ]] ᎨᏒᎢ ᎢᎦᏛ ᎯᎠ ᎦᏬᎯᎵᏴᏛ. ᎯᎠ ᎤᏙᎯᏳ ᎢᎬᏱ ᎠᏂᏃᏈᏏ ᎤᏙᏢᏒ ᎤᎶᏐᏅ ᎯᎠ ᎡᏆ Bang ᎠᎾᏍᎬᏘ ᎤᎭ ᏭᏪᏙᎢ ᎡᏆᎯᎨᏍᏙᏗ, ᎦᎸᎳᏗᏢ 300 solar masses ᎠᎴ ᎤᏟ ᎢᎦᎢ, ᎤᏍᏆᎸᎲ ᎯᎠ ᎧᎵᏬᎯ ᏅᏙᎲᏅ ᎢᏧᏓᎴᎩ ᎦᎨᏓᎨ ᎬᎾᏬᏍᎬ [[lithium]] ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ. ᎪᎯ ᎤᎾᏁᎶᏔᏅ supermassive ᎠᏂᏃᏈᏏ ᎨᏒᎢ ᎦᏅᎯᏓ extinct, ᏱᏂᎬᏛᎾ, ᎠᎴ ᎾᏊ ᎾᏍᎩ ᎤᏩᏒ theoretical.
 
 ᎬᏙᏗ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎾᏍᎩ ᎤᏩᏒ 93 ᎢᏧᏩitsuwakodi Ꮎ [[Jupiter (planet)|Jupiter]], [[AB Doradus C]], ᎠᎾᎵᎪᎲᏍᎩ AB Doradus , ᎨᏒᎢ ᎯᎠ smallest ᎤᎾᏅᏛ ᏃᏈᏏ undergoing nuclear fusion ᎭᏫᎾᏗᏢ Ꮝ ᎠᏰᎵ. Smaller ᏗᏂᏰᎸ ᎠᎴ [[brown dwarf|ᏬᏗᎨ dwarf]], ᎦᏙ ᎤᏍᏗ ᎠᎦᏁᎸ poorly-ᎧᏁᎢᏍᏔᏅᎯ grey ᎡᏍᎦᏂ ᎠᏰᎵ ᎠᏂᏃᏈᏏ ᎠᎴ [[gas giant|ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ giant]]. ᎯᎠ ᏭᏍᏗᎬᎢ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᏃᏈᏏ ᏰᎵᏇ ᎤᎭ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ 75 Jupiters.
 
